[package]
name = "betrusted-rt"
version = "0.0.1"
repository = "https://github.com/betrusted-io/betrusted-rt"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for Betrusted RISC-V CPU's"
keywords = ["riscv", "runtime", "startup"]
license = "ISC"

[dependencies]
r0 = "0.2.2"
vexriscv = "0.0.2"
riscv-rt-macros = { path = "macros", version = "0.1.6" }

[features]
inline-asm = ["vexriscv/inline-asm"]

[dev-dependencies]
vexriscv = "0.0.2"
panic-halt = "0.2.0"
